--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -54,7 +54,7 @@ and open the template in the editor.
                         </div>
                         <div class="col-sm-7" id="Maintenance">
                             <h1>Maintenance</h1>
-                            <h2>Ys is here</h2>
+                            <h2>In case your watch needs some fixing...</h2>
                             <section>
                                 <p>Regular maintenance is essential to ensure that your watch functions correctly. 
                                     The lubrication in the movement parts will deteriorates and eventually dries up after certain time. 
