Linking to other pages from customerservice page

--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -27,17 +27,17 @@ and open the template in the editor.
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>                        
                             </button>
-                            <a class="navbar-brand" href="#Home" style="padding-top: 0px;">
+                            <a class="navbar-brand" href="index.html" style="padding-top: 0px;">
                                 <img class="ONtimelogo" src="images/logo_clr.png" alt="Home">
                             </a>
                         </div>
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
-                                <li><a href="#Home">Home</a></li>
-                                <li><a href="#Products">Products</a></li>
-                                <li class="active"><a href="#CustomerService">Customer Service</a></li>
-                                <li><a href="#Reviews">Reviews</a></li>
-                                <li><a href="#AboutUs">About Us</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li class="active"><a href="customerservice.html">Customer Service</a></li>
+                                <li><a href="productsreview.html">Reviews</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -130,7 +130,7 @@ and open the template in the editor.
             <section>
                 <footer class="navbar-fixed-bottom">
                     <nav>
-                        <p style="text-align: center;"><a class="btmnav" href="#Home">Home</a></p>
+                        <p style="text-align: center;"><a class="btmnav" href="index.html">Home</a></p>
                     </nav>
                     <i>Copyright &#169; 2019 ONtime</i>
                 </footer>
