--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -6,7 +6,9 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bootstrap Example</title>
+        <title>ONtime Watches</title>
+        <meta name="description" content="Buy your favourite watches at ONtime now! Best discounted watches only in Singapore! 
+        How to fix your watch? No worries! Deliver your watches to ONtime & we will fix your watches.">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
