--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -20,8 +20,8 @@ and open the template in the editor.
         <section class="aftnav">
             <section>
                 <nav class="navbar navbar-inverse navbar-fixed-top">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
+                    <section class="container-fluid">
+                        <section class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -30,8 +30,8 @@ and open the template in the editor.
                             <a class="navbar-brand" href="index.html" style="padding-top: 0px;">
                                 <img class="ONtimelogo" src="images/logo_clr.png" alt="Home">
                             </a>
-                        </div>
-                        <div class="collapse navbar-collapse" id="myNavbar">
+                        </section>
+                        <section class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="products.html">Products</a></li>
@@ -42,17 +42,17 @@ and open the template in the editor.
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                             </ul>
-                        </div>
-                    </div>
+                        </section>
+                    </section>
                 </nav>
             </section>
             <article>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-5">
+                <section class="container">
+                    <section class="row">
+                        <section class="col-sm-5">
                             <img class="imgMaintenance" src="images/Maintenance.png" alt="Maintenance">
-                        </div>
-                        <div class="col-sm-7" id="Maintenance">
+                        </section>
+                        <section class="col-sm-7" id="Maintenance">
                             <h1>Maintenance</h1>
                             <h2>In case your watch needs some fixing...</h2>
                             <section>
@@ -67,64 +67,64 @@ and open the template in the editor.
                                     a complete overhaul service is recommended every 3 to 5 years.</p>
                                 <p>For quotation, bring along your watch to your nearest ONtime store for assessment or call to enquire about this service.</p>
                             </section>
-                        </div>
-                    </div>
-                </div>
+                        </section>
+                    </section>
+                </section>
 
                 <section>
                     <h1 class="FAQ" id="FAQ">FAQ</h1>
                     <hr>
-                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingOne">
+                    <section class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                        <section class="panel panel-default">
+                            <section class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                         Do you provide watch repair and servicing?
                                     </a>
                                 </h4>
-                            </div>
-                            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
+                            </section>
+                            <section id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <section class="panel-body">
                                     Yes! You can contact us at 
                                     <a href="tel:123-456-7890">123-456-7890</a>
                                     or come to our store @ 
-                                    <div id="map-container-google-1" class="map-container">
+                                    <section id="map-container-google-1" class="map-container">
                                         <iframe 
                                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.665252371279!2d103.84664861475406!3d1.3775233989953317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da16e96db0a1ab%3A0x3d0be54fbbd6e1cd!2sSingapore%20Institute%20of%20Technology%20(SIT%40NYP)!5e0!3m2!1sen!2ssg!4v1570349899057!5m2!1sen!2ssg" frameborder="1" style="border:1;">
                                         </iframe>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingTwo">
+                                    </section>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="panel panel-default">
+                            <section class="panel-heading" role="tab" id="headingTwo">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                                         How long does it takes to repair a watch?
                                     </a>
                                 </h4>
-                            </div>
-                            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">
+                            </section>
+                            <section id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <section class="panel-body">
                                     2 – 3 months, depending on the brand and complexity of the repair. We will contact you for the collection of your watch once it
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingThree">
+                                </section>
+                            </section>
+                        </section>
+                        <section class="panel panel-default">
+                            <section class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                         I bought a watch oversea, can I send to you for repair?
                                     </a>
                                 </h4>
-                            </div>
-                            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">
+                            </section>
+                            <section id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <section class="panel-body">
                                     Yes. We service all kinds of watches!
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
                 </section>
             </article>
             <section>
