added customer inquiries form and meta keywords tag

--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -8,6 +8,9 @@ and open the template in the editor.
 
 <head>
     <title>Watch us ONtime</title>
+    <meta name="description" content="How to fix your watch? No worries! Deliver your watches to ONtime store & we will fix your watches right away.
+    Any questions that you want to ask us? We have a FAQ section! Or, you can contact us at +65 1234 5678">
+    <meta name="keywords" content="Watches, Buying, Selling, Discount, Offer, Fix">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/customerservice.css" rel="stylesheet" type="text/css" />
@@ -29,7 +32,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html" style="padding-top: 0px;">
-                        <img class="ONtimelogo" src="images/logo_clr.png" alt="Home">
+                        <img class="ONtimelogo" src="images/logo_clr.png" alt="ONtime">
                     </a>
                 </section>
                 <section class="collapse navbar-collapse" id="myNavbar">
@@ -74,7 +77,18 @@ and open the template in the editor.
                     </section>
                 </section>
             </section>
-
+        </article>
+        <section id="CustomerInquiries">
+            <h1>Customer Inquiries</h1>
+            <form action="" method="post">
+                Name: <input type="text" name="fname" required><br>
+                Email: <input type="email" name="femail" required><br>
+                Phone Number: (+65)<input type="number" name="fnumber" minlength="8" maxlength="8" required><br>
+                Question: <input type="text" name="fquestion" required><br>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+        <article>
             <section>
                 <h1 class="FAQ" id="FAQ">FAQ</h1>
                 <hr>
@@ -92,14 +106,14 @@ and open the template in the editor.
                             aria-labelledby="headingOne">
                             <section class="panel-body">
                                 Yes! You can contact us at
-                                <a href="tel:123-456-7890">123-456-7890</a>
-                                or come to our store @
-                                <section id="map-container-google-1" class="map-container">
+                                <a href="tel:+651234-5678">+65 1234 5678</a>
+                                or come to our store @ <address>Ang Mo Kio Avenue 8, Singapore 567739</address>
+                                <!--<section id="map-container-google-1" class="map-container">
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.665252371279!2d103.84664861475406!3d1.3775233989953317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da16e96db0a1ab%3A0x3d0be54fbbd6e1cd!2sSingapore%20Institute%20of%20Technology%20(SIT%40NYP)!5e0!3m2!1sen!2ssg!4v1570349899057!5m2!1sen!2ssg"
                                         frameborder="1" style="border:1;">
                                     </iframe>
-                                </section>
+                                </section>-->
                             </section>
                         </section>
                     </section>
