--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -6,14 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>ONtime Watches</title>
-        <meta name="description" content="Buy your favourite watches at ONtime now! Best discounted watches only in Singapore! 
-        How to fix your watch? No worries! Deliver your watches to ONtime & we will fix your watches.">
+        <title>Bootstrap Example</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"></script> 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -26,6 +24,12 @@ and open the template in the editor.
               type="text/css" 
               href= 
               "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> 
+        <script defer src="js/carousel.js"></script>
+
+        <style>
+            @font-face { font-family: 'collection'; src: url(fonts/CollectionFree.otf); font-style: normal; font-weight: 100; } 
+        </style>
+
         <!-- JavaScript for adding  
          slider for multiple images 
          shown at once-->
@@ -33,6 +37,12 @@ and open the template in the editor.
 
     </head>
     <body>
+
+        <div class="hidden">
+            <div>
+                <img id="overlay" src="images/watchus.png">
+            </div>>
+        </div>
         <nav class="topnav">
 
             <!-- Centered link -->
@@ -57,38 +67,22 @@ and open the template in the editor.
             <div class="row">
                 <div class="col-xs-12">
 
-                    <div id="imageCarousel" class="carousel slide" data-interval="2000"
+                    <div id="imageCarousel" class="carousel slide" data-interval="5000"
                          data-ride="carousel" data-pause="hover" data-wrap="true">
 
-                        <ol class="carousel-indicators">
-                            <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#imageCarousel" data-slide-to="1"></li>
-                            <li data-target="#imageCarousel" data-slide-to="2"></li>
-                        </ol>
-
                         <div class="carousel-inner">
+
+                            <p id="carouselheard">Current Collection</p>
                             <div class="item active">
                                 <div class="row">
                                     <div class="col-xs-4">
                                         <img src="images/watch3.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Desert</h3>
-                                            <p>Desert Image Description</p>
-                                        </div>
                                     </div>
                                     <div class="col-xs-4">
                                         <img src="images/watch1.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Jellyfish</h3>
-                                            <p>Jellyfish Image Description</p>
-                                        </div>
                                     </div>
                                     <div class="col-xs-4">
                                         <img src="images/watch2.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Penguins</h3>
-                                            <p>Penguins Image Description</p>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -96,63 +90,74 @@ and open the template in the editor.
                                 <div class="row">
                                     <div class="col-xs-4">
                                         <img src="images/watch1.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Lighthouse</h3>
-                                            <p>Lighthouse Image Description</p>
-                                        </div>
                                     </div>
                                     <div class="col-xs-4">
                                         <img src="images/watch2.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Hydrangeas</h3>
-                                            <p>Hydrangeas Image Description</p>
-                                        </div>
                                     </div>
                                     <div class="col-xs-4">
                                         <img src="images/watch3.png" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Koala</h3>
-                                            <p>Koala Image Description</p>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
 
+                            <a href="#imageCarousel" class="carousel-control left" data-slide="prev" style="background:none !important" >
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a href="#imageCarousel" class="carousel-control right" data-slide="next" style="background:none !important" >
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+
+                    <div id="imageCarousel1" class="carousel slide" data-interval="5000"
+                         data-ride="carousel" data-pause="hover" data-wrap="true">
+
+                        <div class="carousel-inner">
+                            <p id="carouselheard">Best Collection</p>
+                            <div class="item active">
+                                <div class="row">
+                                    <div class="col-xs-4">
+                                        <img src="images/watch3.png" class="img-responsive">
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <img src="images/watch1.png" class="img-responsive">
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <img src="images/watch2.png" class="img-responsive">
+                                    </div>
+                                </div>
+                            </div>
                             <div class="item">
                                 <div class="row">
                                     <div class="col-xs-4">
-                                        <img src="Images/tulips.jpg" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Tulips</h3>
-                                            <p>Tulips Image Description</p>
-                                        </div>
+                                        <img src="images/watch1.png" class="img-responsive">
                                     </div>
                                     <div class="col-xs-4">
-                                        <img src="Images/Chrysanthemum.jpg" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Chrysanthemum</h3>
-                                            <p>Chrysanthemum Image Description</p>
-                                        </div>
+                                        <img src="images/watch2.png" class="img-responsive">
                                     </div>
                                     <div class="col-xs-4">
-                                        <img src="Images/stripes.jpg" class="img-responsive">
-                                        <div class="carousel-caption">
-                                            <h3>Stripes</h3>
-                                            <p>Stripes Image Description</p>
-                                        </div>
+                                        <img src="images/watch3.png" class="img-responsive">
                                     </div>
                                 </div>
                             </div>
+
+                            <a href="#imageCarousel1" class="carousel-control left" data-slide="prev" style="background:none !important" >
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a href="#imageCarousel1" class="carousel-control right" data-slide="next" style="background:none !important" >
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
                         </div>
 
-                        <a href="#imageCarousel" class="carousel-control left" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                        </a>
-                        <a href="#imageCarousel" class="carousel-control right" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </a>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -176,7 +181,7 @@ and open the template in the editor.
                     </div>
                     <!-- Grid column -->
 
-                    <hr class="clearfix w-100 d-md-none pb-3">
+                    <!--<hr class="clearfix w-100 d-md-none pb-3">-->
 
                     <!-- Grid column -->
                     <div class="col-md-3 mb-md-0 mb-3">
