--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -59,33 +59,55 @@ and open the template in the editor.
                         <h1>Maintenance</h1>
                         <h2>In case your watch needs some fixing...</h2>
                         <section>
-                            <p>Regular maintenance is essential to ensure that your watch functions correctly.
-                                The lubrication in the movement parts will deteriorates and eventually dries up after
-                                certain time.
-                                When it happens, friction will generate and thus affect the precision in telling time.
-                                If your watch is noticeably fast or slow, the movement / mechanism may need to be
-                                serviced.
-                                Aging of gasket in particular will also adversely affect the water-resistance of a
-                                watch.</p>
-                            <p>We recommend a maintenance service to check your watch movement (for mechanical watches),
-                                battery (for quartz watches) and replace new gaskets every 1.5 to 2 years.</p>
-                            <p>To optimize the reliability and well-functioning of your valuable timepiece,
-                                a complete overhaul service is recommended every 3 to 5 years.</p>
-                            <p>For quotation, bring along your watch to your nearest ONtime store for assessment or call
-                                to enquire about this service.</p>
+                            <p>Regular maintenance is essential to ensure that your watch functions correctly. The lubrication in the movement parts will deteriorates and eventually dries up after certain time. When it happens, friction will generate and
+                                thus affect the precision in telling time. If your watch is noticeably fast or slow, the movement / mechanism may need to be serviced. Aging of gasket in particular will also adversely affect the water-resistance of a watch.
+                            </p>
+                            <p>We recommend a maintenance service to check your watch movement (for mechanical watches), battery (for quartz watches) and replace new gaskets every 1.5 to 2 years.</p>
+                            <p>To optimize the reliability and well-functioning of your valuable timepiece, a complete overhaul service is recommended every 3 to 5 years.</p>
+                            <p>For quotation, bring along your watch to your nearest ONtime store for assessment or call to enquire about this service.</p>
                         </section>
                     </section>
                 </section>
             </section>
         </article>
-        <section id="CustomerInquiries">
-            <h1>Customer Inquiries</h1>
-            <form action="" method="post">
-                Name: <input type="text" name="fname" required><br>
-                Email: <input type="email" name="femail" required><br>
-                Phone Number: (+65)<input type="number" name="fnumber" minlength="8" maxlength="8" required><br>
-                Question: <input type="text" name="fquestion" required><br>
-                <input type="submit" value="Submit">
+        <section class="container" id="CustomerInquiries">
+            <form action="">
+                <h1>Customer Inquiries</h1>
+                <section class="row">
+                    <section class="col-25">
+                        <label for="fname">Name</label>
+                    </section>
+                    <section class="col-75">
+                        <input type="text" id="CIname" name="CIname" placeholder="Your name.." required>
+                    </section>
+                </section>
+                <section class="row">
+                    <section class="col-25">
+                        <label for="CIemail">Email</label>
+                    </section>
+                    <section class="col-75">
+                        <input type="email" id="CIemail" name="CIemail" placeholder="Your email.." required>
+                    </section>
+                </section>
+                <section class="row">
+                    <section class="col-25">
+                        <label for="CInumber">Phone Number</label>
+                    </section>
+                    <section class="col-75">
+                        <input type="number" id="CInumber" name="CInumber" placeholder="Your phone number.." required>
+                    </section>
+                </section>
+                <section class="row">
+                    <section class="col-25">
+                        <label for="question">Question</label>
+                    </section>
+                    <section class="col-75">
+                        <textarea id="CIquestion" name="CIquestion" placeholder="Write your question.." style="height:200px"></textarea>
+                    </section>
+                </section>
+                <section class="row">
+                    <input type="submit" value="Submit">
+                </section>
             </form>
         </section>
         <article>
@@ -96,18 +118,16 @@ and open the template in the editor.
                     <section class="panel panel-default">
                         <section class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                    href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                     Do you provide watch repair and servicing?
                                 </a>
                             </h4>
                         </section>
-                        <section id="collapseOne" class="panel-collapse collapse" role="tabpanel"
-                            aria-labelledby="headingOne">
+                        <section id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                             <section class="panel-body">
                                 Yes! You can contact us at
-                                <a href="tel:+651234-5678">+65 1234 5678</a>
-                                or come to our store @ <address>Ang Mo Kio Avenue 8, Singapore 567739</address>
+                                <a href="tel:+651234-5678">+65 1234 5678</a> or come to our store @ <address>Ang Mo Kio
+                                    Avenue 8, Singapore 567739</address>
                                 <!--<section id="map-container-google-1" class="map-container">
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.665252371279!2d103.84664861475406!3d1.3775233989953317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da16e96db0a1ab%3A0x3d0be54fbbd6e1cd!2sSingapore%20Institute%20of%20Technology%20(SIT%40NYP)!5e0!3m2!1sen!2ssg!4v1570349899057!5m2!1sen!2ssg"
@@ -120,31 +140,26 @@ and open the template in the editor.
                     <section class="panel panel-default">
                         <section class="panel-heading" role="tab" id="headingTwo">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                    href="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                                     How long does it takes to repair a watch?
                                 </a>
                             </h4>
                         </section>
-                        <section id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
-                            aria-labelledby="headingTwo">
+                        <section id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                             <section class="panel-body">
-                                2 – 3 months, depending on the brand and complexity of the repair. We will contact you
-                                for the collection of your watch once it
+                                2 – 3 months, depending on the brand and complexity of the repair. We will contact you for the collection of your watch once it
                             </section>
                         </section>
                     </section>
                     <section class="panel panel-default">
                         <section class="panel-heading" role="tab" id="headingThree">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                    href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                     I bought a watch oversea, can I send to you for repair?
                                 </a>
                             </h4>
                         </section>
-                        <section id="collapseThree" class="panel-collapse collapse" role="tabpanel"
-                            aria-labelledby="headingThree">
+                        <section id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                             <section class="panel-body">
                                 Yes. We service all kinds of watches!
                             </section>
