--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -86,7 +86,7 @@ and open the template in the editor.
                         <label for="CIemail">Email</label>
                     </section>
                     <section class="col-75">
-                        <input type="email" id="CIemail" name="CIemail" placeholder="Your email.." required>
+                        <input type="email" id="CIemail" name="CIemail" placeholder="E.g: abc@def.com" required>
                     </section>
                 </section>
                 <section class="row">
@@ -94,7 +94,7 @@ and open the template in the editor.
                         <label for="CInumber">Phone Number</label>
                     </section>
                     <section class="col-75">
-                        <input type="number" id="CInumber" name="CInumber" placeholder="Your phone number.." required>
+                        <input type="tel" id="CInumber" name="CInumber" placeholder="(+65) E.g: 12345678" pattern="[0-9]{8}" maxlength="8" required>
                     </section>
                 </section>
                 <section class="row">
