--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     <title>Watch us ONtime</title>
     <meta name="description" content="How to fix your watch? No worries! Deliver your watches to ONtime store & we will fix your watches right away.
     Any questions that you want to ask us? We have a FAQ section! Or, you can contact us at +65 1234 5678">
-    <meta name="keywords" content="Watches, Buying, Selling, Discount, Offer, Fix">
+    <meta name="keywords" content="Watches, Buying, Selling, Discount, Offer, Fix, Maintenance">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/customerservice.css" rel="stylesheet" type="text/css" />
