--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bootstrap Example</title>
+        <title>ONtime Main Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -30,10 +30,6 @@ and open the template in the editor.
             @font-face { font-family: 'collection'; src: url(fonts/CollectionFree.otf); font-style: normal; font-weight: 100; } 
         </style>
 
-        <!-- JavaScript for adding  
-         slider for multiple images 
-         shown at once-->
-
 
     </head>
     <body>
@@ -45,16 +41,13 @@ and open the template in the editor.
         </div>
         <nav class="topnav">
 
-            <!-- Centered link -->
             <div class="topnav-centered">
                 <a href="#home" class="active"><img src="images\logo.png" alt="related square 2" style="width:100px;height:40px;"/></a>
             </div>
 
-            <!-- Left-aligned links (default) -->
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
 
-            <!-- Right-aligned links -->
             <div class="topnav-right">
                 <a href="#search">Search</a>
                 <a href="#about">About</a>
@@ -75,26 +68,26 @@ and open the template in the editor.
                             <p id="carouselheard">Current Collection</p>
                             <div class="item active">
                                 <div class="row">
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch3.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch1.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch2.png" class="img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="row">
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch1.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch2.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch3.png" class="img-responsive">
                                     </div>
                                 </div>
@@ -124,26 +117,26 @@ and open the template in the editor.
                             <p id="carouselheard">Best Collection</p>
                             <div class="item active">
                                 <div class="row">
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch3.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch1.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch2.png" class="img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="row">
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch1.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch2.png" class="img-responsive">
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-4 img-zoom imghover">
                                         <img src="images/watch3.png" class="img-responsive">
                                     </div>
                                 </div>
@@ -160,6 +153,12 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
+        </div>
+
+
+        <div class ="jumbotron">
+            <h1>WATCH US</h1>
+            <h2></h2>
         </div>
 
 
