--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -158,7 +158,11 @@ and open the template in the editor.
 
         <div class ="jumbotron">
             <h1>WATCH US</h1>
-            <h2></h2>
+            <div class="container-fluid">
+                <div class="col-md-4"></div>
+                <h2 class="col-md-4">Watch us as we bring you amazing wathes with stunning designs. We try our best to bring you watches that you will love wearing all the time so that you can always be ONtime</h2>
+                <div class="col-md-4"></div>
+            </div>
         </div>
 
 
@@ -237,7 +241,7 @@ and open the template in the editor.
             <!-- Footer Links -->
 
             <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2018 Copyright: MDBootstrap.com
+            <div class="footer-copyright text-center py-3">&copy 2019 Copyright: ONtime.com
             </div>
             <!-- Copyright -->
 
