Im not sure what i updated

--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -182,33 +182,7 @@ and open the template in the editor.
                         <p>Here you can use rows and columns to organize your footer content.</p>
 
                     </div>
-                    <!-- Grid column -->
 
-                    <!--<hr class="clearfix w-100 d-md-none pb-3">-->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 mb-md-0 mb-3">
-
-                        <!-- Links -->
-                        <h5 class="text-uppercase">Links</h5>
-
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">Link 1</a>
-                            </li>
-                            <li>
-                                <a href="#!">Link 2</a>
-                            </li>
-                            <li>
-                                <a href="#!">Link 3</a>
-                            </li>
-                            <li>
-                                <a href="#!">Link 4</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <!-- Grid column -->
 
                     <!-- Grid column -->
                     <div class="col-md-2 mb-md-0 mb-2">
@@ -218,16 +192,13 @@ and open the template in the editor.
 
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#!">Link 1</a>
+                                <a href="#!" class="icon-container"><div class="img-zoom imghover"><img class="icon" src="images/ficon.png"></div></a>
                             </li>
                             <li>
-                                <a href="#!">Link 2</a>
+                                <a href="#!"><div class="img-zoom imghover"><img class="icon" src="images/ticon.png"></div></a>
                             </li>
                             <li>
-                                <a href="#!">Link 3</a>
-                            </li>
-                            <li>
-                                <a href="#!">Link 4</a>
+                                <a href="#!"><div class="img-zoom imghover"><img class="icon" src="images/iicon.png"></div></a>
                             </li>
                         </ul>
 
