--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
 
 <head>
@@ -59,6 +55,7 @@ and open the template in the editor.
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-5">
+                            <!-- allwatches.com.sg,MAINTENANCE / COMPLETE OVERHAUL SERVICE,https://allwatches.com.sg/maintenance-complete-overhaul-service/ -->
                             <img class="imgMaintenance" src="images/Maintenance.png" alt="Maintenance">
                         </div>
                         <div class="col-sm-7" id="Maintenance">
