worked on shopping cart and added checkout page

--- a/ONtime/public_html/aboutus.html
+++ b/ONtime/public_html/aboutus.html
@@ -10,6 +10,8 @@ and open the template in the editor.
     <title>About Us - OnTime</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ONtime - Top Seller and Best Quality Services on Watches">
+    <meta name="keywords" content="Watches, Buying, Selling, Discount, Offer, Fix, Maintenance">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -77,7 +79,7 @@ and open the template in the editor.
         <h1>Our Team</h1>
         <p>Our current team consists of 4 highly motivated watch makers.
             If you'd like to know more about our members, click on the respective picture.</p>
-        <div id="yeesiang" class="thumbnail col-md-3" data-toggle="collapse" data-target="#yeesiangstext">
+        <div id="yeesiang" class="thumbnail col-md-3" data-toggle="collapse" data-target="#yeesiangstext" data-parent="#ourteam">
             <h2>Yee Siang</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Yee Siang">
             <figure id="yeesiangstext" class="popup collapse">
@@ -87,7 +89,7 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="aaron" class="thumbnail col-md-3" data-toggle="collapse" data-target="#aaronstext">
+        <div id="aaron" class="thumbnail col-md-3" data-toggle="collapse" data-target="#aaronstext" data-parent="#ourteam">
             <h2>Aaron</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Aaron">
             <figure id="aaronstext" class="popup collapse">
@@ -102,7 +104,7 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="daniel" class="thumbnail col-md-3" data-toggle="collapse" data-target="#danielstext">
+        <div id="daniel" class="thumbnail col-md-3" data-toggle="collapse" data-target="#danielstext" data-parent="#ourteam">
             <h2>Daniel</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Daniel">
             <figure id="danielstext" class="popup collapse">
@@ -118,7 +120,7 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="nikola" class="thumbnail col-md-3" data-toggle="collapse" data-target="#nikostext">
+        <div id="nikola" class="thumbnail col-md-3" data-toggle="collapse" data-target="#nikostext" data-parent="#ourteam">
             <h2>Nikola</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Nikola">
             <figure id="nikostext" class="popup collapse">
