--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -17,75 +17,85 @@
         <h1>Your shopping cart at ONtime</h1>
     </header>
     <div class="row">
-        <h2>Your Shopping Cart contains:</h2>
-        <table class="table table-responsive">
-            <thead>
+        <div class="col-md-12">
+            <h2>Your Shopping Cart contains:</h2>
+            <table class="table table-responsive">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Quantity</th>
+                        <th>Price/piece</th>
+                        <th>Price</th>
+                        <th></th>
+                    </tr>
+                </thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Quantity</th>
-                    <th>Price/piece</th>
-                    <th>Price</th>
-                    <th></th>
+                    <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
+                    <td>1</td>
+                    <td>40SGD</td>
+                    <td>40SGD</td>
+                    <td><button>Remove</button></td>
                 </tr>
-            </thead>
-            <tr>
-                <td>Watch1</td>
-                <td>1</td>
-                <td>200SGD</td>
-                <td>200SGD</td>
-                <td><button>Remove</button></td>
-            </tr>
-            <tr>
-                <td>Watch2</td>
-                <td>2</td>
-                <td>150SGD</td>
-                <td>300SGD</td>
-                <td><button>Remove</button></td>
-            </tr>
-        </table>
-    </div>
-    <div class="row">
-        <h2>Select Payment Type</h2>
-        <form>
-            <input type="radio" name="payment-type" value="Cash" checked> Cash<br>
-            <input type="radio" data-toggle="collapse" data-target="#bill" name="payment-type" value="Credit/DebitCard">
-            Credit/Debit Card
-        </form>
-        <section id="bill" class="collapse">
-            <h3>Billing Address</h3>
-            <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
-            <label for="email"><i class="fa fa-envelope"></i> Email</label>
-            <input type="text" id="email" name="email" placeholder="john@example.com">
-            <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-            <label for="city"><i class="fa fa-institution"></i> City</label>
-            <input type="text" id="city" name="city" placeholder="New York">
-            <label for="state">State</label>
-            <input type="text" id="state" name="state" placeholder="NY">
-            <label for="zip">Zip</label>
-            <input type="text" id="zip" name="zip" placeholder="10001">
-        </section>
+                <tr>
+                    <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
+                    <td>2</td>
+                    <td>40SGD</td>
+                    <td>80SGD</td>
+                    <td><button>Remove</button></td>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <div class="row">
-        <h2>Let us know your delivery address</h2>
-        <form>
-            First name:<br>
-            <input type="text" name="firstname"><br>
-            Last name:<br>
-            <input type="text" name="lastname"><br>
-            Street:<br>
-            <input type="text" name="street"><br>
-            Country Code:<br>
-            <input type="text" name="countrycode"><br>
-            Country:<br>
-            <input type="text" name="country"><br>
-            Phone Number:<br>
-            <input type="text" name="phonenumber"><br>
-            <button>Purchase</button>
-        </form>
+        <div class="col-md-6">
+            <h2>Delivery Address</h2>
+            <form>
+                Full name:<br>
+                <input type="text" name="name"><br>
+                Street:<br>
+                <input type="text" name="street"><br>
+                Country Code:<br>
+                <input type="text" name="countrycode"><br>
+                Country:<br>
+                <input type="text" name="country"><br>
+                Phone Number:<br>
+                <input type="tel" name="phonenumber"><br>
+                Email Address:<br>
+                <input type="email" name="email"><br>
+            </form>
+        </div>
+
+        <div class="col-mg-6">
+            <h2>Select Payment Type</h2>
+            <form id="selectpaymenttype">
+                <input type="radio" name="payment-type" value="Cash" data-toggle="collapse"
+                    data-target="#infocash" data-parent="#selectpaymenttype" checked> Cash<br>
+
+                <p class="collapse" id="infocash">Note: Cash must be exact!</p>
+
+
+                <input type="radio" name="payment-type" value="Credit/DebitCard" data-toggle="collapse"
+                    data-target="#bill" data-parent="#selectpaymenttype"> Credit/Debit Card<br>
+
+                <form class="collapse" id="bill">
+                    Name on Card:<br>
+                    <input type="text" name="nameoncard"><br>
+                    Credit Card Number:<br>
+                    <input type="text" name="cardnumber"><br>
+                    Expiry Date:<br>
+                    <input type="text" name="expdate"><br>
+                    cvv:<br>
+                    <input type="text" name="cvv"><br>
+                </form>
+            </form>
+        </div>
     </div>
+    <div id="checkoutbtn" class="row">
+        <button>Purchase</button>
+    </div>
+
+
 </body>
 
 </html>
