linked checkout to shopping cart

--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div id="checkoutbtn" class="row">
-        <button>Purchase</button>
+        <button><a href="checkout.html">Purchase</a></button>
     </div>
 
 
